--- a/ebekala/www/index.html
+++ b/ebekala/www/index.html
@@ -42,7 +42,7 @@
                 <p class="event received"></p>
             </div>
         </div>
-        <!--<script type="text/javascript" src="cordova.js"></script>-->
+        <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
